# WordBatchTool

./: .gitignore  NEXT_STEPS.md  README.md  TAURI_DESKTOP.md  WINDOWS_EXE_BUILD.md  build_windows.ps1
backend/: WordBatchTool.spec  launcher.py  requirements-sidecar.txt  requirements.txt  sidecar.py
backend/app/: config.py  database.py  main.py  repository.py  schemas.py
backend/app/services/: cleanup.py  converter.py  docx_formatter.py  processor.py  queue.py  zipper.py
backend/tests/: test_api.py  test_converter.py  test_docx_formatter.py  test_zipper.py
design/: new-architecture.md  ui-workbench-mockups.html
docs/: 格式通安装使用手册.md
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: main.jsx  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
scripts/: build_sidecar.py  package_desktop.ps1  package_desktop.sh  tauri_frontend.mjs
